[tool.poetry]
name = "chat-match"
version = "0.1.0"
description = ""
authors = ["Eric Liu <latiosworks@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
firebase-admin = "^5.0.0"
Flask-RESTful = "^0.3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
